# SeismicBuildingExposure

./: .gitignore  README.md  pyproject.toml  setup.py
SeismicBuildingExposure/: __init__.py  irregularity.py  position.py  utils.py
SeismicBuildingExposure/MLfootprint/: evaluation.py  mask2former_train.ipynb  train_sam2.yaml  train_test_dataset.ipynb
SeismicBuildingExposure/MLfootprint/SAM2_training_folder/: train.py
SeismicBuildingExposure/MLstructural_system/: 3_classes_processed_data.csv  EDA.ipynb  Logistic_regression.ipynb  Neural_network.ipynb  Random_forest.ipynb  XGBoost.ipynb  processed_data.csv  survey_data_all_cities.csv
SeismicBuildingExposure/MLstructural_system/Neural_network/: compare_models.py  main.py
SeismicBuildingExposure/MLstructural_system/TabPFN/: 3_classes_processed_data.csv  main.py
SeismicBuildingExposure/footprint/: README.MD  README_español.md  __init__.py  shape.py  utils.py
SeismicBuildingExposure/footprint/examples/: example_irregularity_norms.ipynb  example_position.ipynb
SeismicBuildingExposure/height/: DSM.py  DTM.py  __init__.py  building.py  height.py  irregularity.py  utils.py
docs/footprint/: README_español.md
docs/ml-structural-system/: README.md
examples/: example_irregularity_norms.ipynb  example_position.ipynb  setup.py
examples/footprint/: position.ipynb  shape_norms.ipynb
examples/mlstructuralsystem/pilot_regions/: config.py  main.py
src/SeismicBuildingExposure/footprint/: shape.py
src/SeismicBuildingExposure/height/: __init__.py  irregularity.py  utils.py
src/seismicbuildingexposure/: __init__.py
(+140 files in other folders)
