[project]
name = "seismic-building-exposure"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "geopandas>=1.1.3",
    "numpy>=1.26,<2.2",
    "pandas>=2.0,<2.3",
    "pyogrio>=0.12.1",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
]


[project.optional-dependencies]
ml = [
    "distinctipy>=1.3.4",
    "scikit-learn>=1.6.1",
    "optuna>=4.4.0",
    "imbalanced-learn>=0.14.1",
    "umap-learn>=0.5.9.post2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pyarrow>=17.0.0",
]

autogluon = [
    "autogluon>=1.3.1,<1.5.0",
    "mlflow>=3.8.1",
]

vision = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.3",
    "numpy>=1.26,<2.2",

    # geometry / dataset tools
    "pycocotools>=2.0.7",

    # hydra config system
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # distributed training
    "submitit>=1.5.0",

    # IO + utils
    "iopath>=0.1.10",

    # optional SAM2 dependency (if available)
    # "sam2"  (only if internal or installed separately)
]

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "nbsphinx>=0.9.6",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
